# Riptide

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  lobster-validation.yml
backtest/: CMakeLists.txt  backtester.hpp  multi_instrument_backtester.hpp
bench/: CMakeLists.txt  ENVIRONMENT.md  collect_environment.sh  micro_benchmarks.cpp  pin_and_run.sh  replay_harness.cpp  run_replay_benchmark.sh  stats.cpp  stats.hpp
bench/results/: README.md  environment_20260720.txt  micro_benchmarks_20260721.txt  micro_benchmarks_pooled_vs_reference_20260720.txt  replay_baseline_20260720_AAPL.txt  replay_baseline_20260721_AMZN.txt  replay_baseline_20260721_MSFT.txt
cmake/: CompilerWarnings.cmake
docs/: DESIGN.md  OPTIMIZATION_LOG.md
fuzz/: CMakeLists.txt  byte_stream.hpp  fuzz_target.cpp  random_sequence.cpp  random_sequence.hpp
include/riptide/: event.hpp  fixed_size_pool.hpp  matching_engine.hpp  order.hpp  order_book.hpp  order_port.hpp  pool_allocator.hpp  pooled_order_book.hpp  portfolio.hpp  risk_limits.hpp  strategy.hpp  types.hpp  version.hpp
presentation/: README.md  console.html
src/: CMakeLists.txt  fixed_size_pool.cpp  matching_engine.cpp  order_book.cpp  pooled_order_book.cpp  version.cpp
tests/: CMakeLists.txt  backtester_test.cpp  differential_test.cpp  edge_cases_test.cpp  event_test.cpp  fixed_size_pool_test.cpp  matching_engine_test.cpp  order_book_test.cpp  order_port_test.cpp  pooled_order_book_test.cpp  portfolio_test.cpp  stats_test.cpp  test_version.cpp
tools/: README.md  fetch_data.sh
tools/backtest/: CMakeLists.txt  main.cpp  rest_at_best_bid_strategy.hpp
tools/lobster/: CMakeLists.txt  adapter.cpp  adapter.hpp  lobster_book.cpp  lobster_book.hpp  lobster_message.cpp  lobster_message.hpp
tools/validate/: CMakeLists.txt  adapter.cpp  adapter.hpp  comparator.cpp  comparator.hpp  lobster_book.cpp  lobster_message.cpp  main.cpp
